# earnings-call-sentiment-from-voice-transcript-with-an-optional-video-24-02-2026

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-optional-multimodal.txt  requirements.txt
app/: README.md  __init__.py  server.py  site_server.py
docs/: ab-test-plan.md  april-2-demo-side-by-side.md  architecture-diagram.md  benchmark_progress.md  capstone-evaluation-summary.md  competitive-analysis.md  current-status.md  day-1-scope-lock.md  demo-path.md  demo-plan.md  directional_call_shortlist.md  evaluation-baseline.md  evaluation-summary.md  evidence-map.md  external-multimodal-datasets.md  feasibility-analysis.md  feature-iterations.md  freeze-boundaries.md  human_eval_protocol.md  labeling_rubric.md  morning_review_package.md  msft-ambiguity-explainer.md  multimodal-data-plan.md  multimodal-eval-reporting.md  multimodal-review-eval-plan.md  multimodal-setup.md  mvp_scope_freeze.md  nlp-rerun-plan.md  nlp-sidecar-blockers.md  overnight_run_log_20260310.md  persona.md  problem-value-prop.md  scoping-roadmap.md  source-manifests.md
outputs_prior/: chunks_scored.csv  chunks_scored.jsonl  guidance.csv  guidance_revision.csv  metrics.json  report.md  risk_metrics.json  sentiment_segments.csv  tone_changes.csv  transcript.json  transcript.txt
scripts/: acquire_curated_public_media.py  alignment_to_segment_candidates.py  backtest_signals.py  build_curated_visual_clips.py  build_multimodal_eval_summary.py  build_visual_status_report.py  check.sh  check_media_support_readiness.py  check_multimodal_runtime.py  compare_multimodal_support_slice.py  evaluate_behavior_signal_set.py  evaluate_gold_benchmark.py  ibkr_prices_to_prices_csv.py  link_curated_slice_local_artifacts.py  refresh_media_support_casepack.py  run_curated_multimodal_slice.py  run_eval.py  run_nlp_segment_scoring.py  run_openface_features.py  run_whisperx_alignment.py  score_chunks.py  smoke.sh  summarize_behavior_eval_set.py  summarize_gold_benchmark.py  summarize_media_support_eval.py  summarize_multimodal_plan.py  summarize_multimodal_review_results.py  summarize_nlp_disagreement.py  summarize_task_impact_results.py  summarize_visual_coverage.py  train_media_support_models.py  validate_external_datasets.py  validate_source_manifests.py  validate_source_pairs.py  verify_outputs.py
slides/: README.md
tests/: test_audio_behavior.py  test_backtest_signals.py  test_behavior_signals.py  test_chunking.py  test_cli.py  test_cli_download_only.py  test_cli_flags.py  test_cli_help.py  test_cli_summary_dry_run.py  test_cli_transcribe_only_smoke.py  test_download_dry_run.py  test_download_only_dry.py  test_dry_run.py  test_evaluate_gold_benchmark.py  test_guidance_revision.py  test_ibkr_prices_converter.py  test_imports.py  test_media_support_comparison.py  test_media_support_eval.py  test_multimodal_support.py  test_optional_runtime.py  test_pipeline_dry_run.py  test_post_summary.py  test_progress_duration.py  test_qa_shift.py  test_question_shifts.py  (+11 more)
(+188 files in other folders)
