[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earnings-call-sentiment"
version = "0.1.0"
description = "Earnings call sentiment from voice transcript with optional video input."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Keith" }]
license = { text = "MIT" }

# Move runtime deps from requirements.txt into here.
# (If you paste your requirements.txt content, I’ll fill this exactly.)
dependencies = [
  "faster-whisper",
  "transformers",
  "torch",
  "pandas",
  "numpy",
  "scipy",
  "soundfile",
  "librosa",
  "ffmpeg-python",
  "opensmile",
  "yt-dlp",
  "typer",
  "rich",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
earnings-call-sentiment = "earnings_call_sentiment.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
earnings_call_sentiment = ["py.typed"]
